# subspy

./: .gitignore  1file.bat  AI-Instructions.md  README.md  activenv.bat  build-all.bat  build.sh  build_all.sh  git-startup.bat  git-update.bat  main.spec  pyproject.toml  subscriptions.db  subspy_backup.json
DATA/: subscriptions.db  subspy_backup_20260111.json
scripts/: make_icon.py
src/: database.py  main.py  pdf_export.py  platform_utils.py  subscriptions.db  version.py
