[project]
name = "subspy"
version = "4.05"
description = "Εφαρμογή Διαχείρισης Εσόδων & Εξόδων - Income/Expense Management App"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SpyAlekos", email = "spyalekos@gmail.com" }
]
dependencies = [
    "flet>=0.80.1",
    "pillow>=12.1.1",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.1",
]

[tool.flet]
org = "com.spyalekos"
product = "subspy"
company = "SpyAlekos"
copyright = "Copyright (C) 2026 by SpyAlekos"

[tool.flet.app]
path = "src"

[tool.flet.android]
adaptive_icon_background = "#2196F3"

[tool.flet.ios]
# iOS build settings (requires Mac + Xcode)

[tool.flet.macos]
# macOS build settings (requires Mac + Xcode)

[tool.flet.windows]
# Windows build settings

[tool.flet.splash]
color = "#2196F3"
